client notes alignment fix

--- a/src/pages/contacts/clientNotes/client-notes.scss
+++ b/src/pages/contacts/clientNotes/client-notes.scss
@@ -1,7 +1,7 @@
 .client-notes-card {
     background: #ffffff;
     border-radius: 8px;
-    width: 798px;
+    width: calc(100% - 296px);
     margin: 30px 0 0 auto;
     padding-bottom: 30px;
     .header {
